Move ProfileScanner and implementation to subpackage. Add new ProfileScanner that checks the system properties.